// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design system components renders Card variants consistently 1`] = `
<div
  class="rounded-xl sm:rounded-2xl p-4 sm:p-5 md:p-6 relative overflow-hidden bg-white border border-slate-200 shadow-sm transition-all duration-200 hover:shadow-lg hover:-translate-y-0.5"
>
  <div
    class="absolute top-0 right-0 w-16 h-16 bg-primary/6 rounded-bl-2xl pointer-events-none"
  />
  <div
    class="relative z-10"
  >
    <div
      class="mb-4 sm:mb-5 md:mb-6 flex flex-col gap-2 sm:gap-3"
    >
      <h3
        class="text-lg sm:text-xl font-bold text-foreground group-hover:text-primary transition-colors duration-200"
      >
        Title
      </h3>
      <p
        class="text-xs sm:text-sm text-muted-foreground leading-relaxed group-hover:text-foreground/80 transition-colors duration-200"
      >
        Desc
      </p>
    </div>
    Child
  </div>
</div>
`;

exports[`Design system components renders Card variants consistently 2`] = `
<div
  class="rounded-xl sm:rounded-2xl p-4 sm:p-5 md:p-6 relative overflow-hidden bg-white border border-slate-200 shadow-md transition-all duration-200 hover:shadow-lg hover:-translate-y-0.5"
>
  <div
    class="absolute top-0 right-0 w-16 h-16 bg-primary/6 rounded-bl-2xl pointer-events-none"
  />
  <div
    class="relative z-10"
  >
    <div
      class="mb-4 sm:mb-5 md:mb-6 flex flex-col gap-2 sm:gap-3"
    >
      <h3
        class="text-lg sm:text-xl font-bold text-foreground group-hover:text-primary transition-colors duration-200"
      >
        Title
      </h3>
      <p
        class="text-xs sm:text-sm text-muted-foreground leading-relaxed group-hover:text-foreground/80 transition-colors duration-200"
      >
        Desc
      </p>
    </div>
    Child
  </div>
</div>
`;

exports[`Design system components renders Card variants consistently 3`] = `
<div
  class="rounded-xl sm:rounded-2xl p-4 sm:p-5 md:p-6 relative overflow-hidden glass-card transition-all duration-200 hover:shadow-lg hover:-translate-y-0.5"
>
  <div
    class="absolute top-0 right-0 w-16 h-16 bg-primary/6 rounded-bl-2xl pointer-events-none"
  />
  <div
    class="absolute inset-0 bg-primary/5 pointer-events-none"
  />
  <div
    class="relative z-10"
  >
    <div
      class="mb-4 sm:mb-5 md:mb-6 flex flex-col gap-2 sm:gap-3"
    >
      <h3
        class="text-lg sm:text-xl font-bold text-foreground group-hover:text-primary transition-colors duration-200"
      >
        Title
      </h3>
      <p
        class="text-xs sm:text-sm text-muted-foreground leading-relaxed group-hover:text-foreground/80 transition-colors duration-200"
      >
        Desc
      </p>
    </div>
    Child
  </div>
</div>
`;

exports[`Design system components renders Card variants consistently 4`] = `
<div
  class="rounded-xl sm:rounded-2xl p-4 sm:p-5 md:p-6 relative overflow-hidden bg-white/85 shadow-lg backdrop-blur-xl transition-all duration-200 hover:shadow-lg hover:-translate-y-0.5"
>
  <div
    class="absolute top-0 right-0 w-16 h-16 bg-primary/6 rounded-bl-2xl pointer-events-none"
  />
  <div
    class="relative z-10"
  >
    <div
      class="mb-4 sm:mb-5 md:mb-6 flex flex-col gap-2 sm:gap-3"
    >
      <h3
        class="text-lg sm:text-xl font-bold text-foreground group-hover:text-primary transition-colors duration-200"
      >
        Title
      </h3>
      <p
        class="text-xs sm:text-sm text-muted-foreground leading-relaxed group-hover:text-foreground/80 transition-colors duration-200"
      >
        Desc
      </p>
    </div>
    Child
  </div>
</div>
`;

exports[`Design system components renders FeatureCard without gradient variant 1`] = `
<div
  class="group rounded-xl p-6 transition-all duration-200 hover:shadow-lg hover:-translate-y-0.5 cursor-pointer relative overflow-hidden border border-border bg-card shadow-sm hover:border-primary/50 glitter-box magnetic-hover"
>
  <div
    class="absolute top-0 right-0 w-20 h-20 bg-primary/8 rounded-bl-3xl pointer-events-none transition-all duration-300 group-hover:bg-primary/12"
  />
  <div
    class="absolute inset-0 bg-primary/5 opacity-0 group-hover:opacity-100 transition-opacity duration-300 rounded-2xl"
  />
  <div
    class="relative z-10"
  >
    <div
      class="mb-4 flex items-center gap-3"
    >
      <div
        class="flex h-12 w-12 items-center justify-center rounded-xl bg-primary/10 hover:bg-primary/15 text-primary transition-all duration-300 group-hover:scale-105 shadow-md group-hover:shadow-lg border-2 border-primary/10 group-hover:border-primary/20"
      >
        <span>
          *
        </span>
      </div>
    </div>
    <h3
      class="mb-3 text-lg font-bold text-foreground transition-colors duration-300 group-hover:text-primary tracking-tight"
    >
      Feat
    </h3>
    <p
      class="text-sm leading-relaxed text-muted-foreground group-hover:text-foreground/90 transition-colors duration-300"
    >
      Desc
    </p>
    <div
      class="mt-6 flex items-center gap-2"
    >
      <div
        class="h-0.5 w-0 rounded-full bg-primary transition-all duration-300 group-hover:w-12"
      />
      <span
        class="opacity-0 group-hover:opacity-100 transition-all duration-300 transform group-hover:translate-x-1 text-primary text-sm"
      >
        →
      </span>
    </div>
  </div>
</div>
`;

exports[`Design system components renders Section (default) and subtle variants 1`] = `
<section
  class="relative py-8 sm:py-10 md:py-12 lg:py-16 xl:py-20 overflow-hidden transition-all duration-500 bg-background/80 backdrop-blur-xl border border-border/40 shadow-md"
>
  <div
    aria-hidden="true"
    class="absolute -top-32 -right-32 w-96 h-96 bg-primary/8 rounded-full blur-3xl pointer-events-none"
  />
  <div
    aria-hidden="true"
    class="absolute -bottom-32 -left-32 w-80 h-80 bg-secondary-1/8 rounded-full blur-3xl pointer-events-none"
  />
  <div
    aria-hidden="true"
    class="absolute top-1/2 right-1/4 w-64 h-64 bg-secondary-2/6 rounded-full blur-2xl pointer-events-none"
  />
  <div
    class="relative z-10"
  >
    <div
      class="mx-auto w-full max-w-7xl px-3 sm:px-4 md:px-6 lg:px-8 xl:px-10"
    >
      <div>
        Content
      </div>
    </div>
  </div>
</section>
`;

exports[`Design system components renders Section (default) and subtle variants 2`] = `
<section
  class="relative py-8 sm:py-10 md:py-12 lg:py-16 xl:py-20 overflow-hidden transition-all duration-500 bg-background/75 backdrop-blur-lg border border-border/30 shadow-md"
>
  <div
    class="relative z-10"
  >
    <div
      class="mx-auto w-full max-w-7xl px-3 sm:px-4 md:px-6 lg:px-8 xl:px-10"
    >
      <div>
        Content
      </div>
    </div>
  </div>
</section>
`;
